implemented /api/skupovi/:id/komentari endpoint
